--- a/views/error404.html
+++ b/views/error404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error</title>
+    <title>success</title>
     <link rel="styleSheet" href="/css/main.css"
 </head>
 <body>
@@ -11,11 +11,12 @@
         <nav>
           <ul>
             <li><a href="/shop">shop</a></li>
-            <li><a href="/admin/add-product" class="active">Add product</a></li>
+            <li><a href="/admin/add-product">Add product</a></li>
+            <li><a href="/contactus">Contact Us</a></li>
           </ul>
         </nav>
       </header>
       <main>
-    <h1>File not found !</h1>
+    <h1>File Not Found</h1>
 </body>
 </html>
